Fix no results filters from going too wide on smaller screens

--- a/themes/finna2/less/finna/filters.less
+++ b/themes/finna2/less/finna/filters.less
@@ -88,7 +88,7 @@
     display: inline-flex;
     align-items: center;
     max-height: 30px;
-    p {
+    .filter-text {
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
